uthash ChangeLog
================

include::sflogo.txt[]

Click to return to the link:index.html[uthash home page].

Version 1.9.4 (2011-05-22)
--------------------------
* added support for MurmurHash v3 (TODO)
* added support for utlist concatenation (TODO)
* added documention for constructing a multi-level hash table (thanks, Richard Cook!)
* fixed termination when `utstring_clear` is followed by `utstring_body` (thanks, Dino Ciuffetti!)
* fixed utarray_inserta macro when used with complex arguments
* on Visual Studio define `uint8_t` 
* added `utstring_renew`
* uthash has been downloaded 16,055 times

Version 1.9.3 (2010-10-31)
--------------------------
* fix an `ifdef` for compatibility with Intel compiler (thanks, degski!)
* fix `HASH_ITER` macro to satisfy C++ casting rules (thanks, Erik Bai!)

Version 1.9.2 (2010-10-04)
--------------------------
* new `HASH_ITER` macro for more convenient deletion-safe iteration
* `hashscan` can now run on FreeBSD 8.1 and later (thanks, Markus Gebert!)
* More parens to evaluate complex macro arguments properly (thanks, ngg!)
* Add sz parameter to the `uthash_free` hook for platforms that do their own memory management. Hopefully this minor API change doesn't cause too much breakage for people. (thanks, Niall Douglas!)
* uthash has been downloaded 12,294 times

Version 1.9.1 (2010-05-15)
--------------------------
* Fix a redefinition warning when using `uthash.h` and `utstring.h` together
* Fix a bug in `utstring_init`
* Added `HASH_FIND_PTR` and `HASH_ADD_PTR` (thanks, Niall Douglas!)

Version 1.9 (2010-03-31)
--------------------------
* uthash now supports Visual Studio 2008 and 2010 in C or C++ code!
* new headers link:utarray.html[utarray.h] and link:utstring.html[utstring.h] 
	are now included. These implement dynamic arrays and strings using macros
* link:utlist.html[utlist.h] now has deletion-safe iterators and search macros
* the test suite now runs under Visual Studio (thanks again degski!)