@@ -9,7 +9,7 @@ PROGS = test1 test2 test3 test4 test5 test6 test7 test8 test9   \
         test34 test35 test36 test37 test38 test39 test40 test41 \
         test42 test43 test44 test45 test46 test47 test48 test49 \
 				test50 test51 test52 test53 test54 test55 test56 test57 \
-        test58 test59 test60
+        test58 test59 test60 test61
 CFLAGS = -I$(HASHDIR) 
 #CFLAGS += -DHASH_BLOOM=16
 #CFLAGS += -O3
